--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/router": "~8.2.4",
     "bootstrap": "^4.3.1",
     "bootstrap-scss": "^4.3.1",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.3",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
